# astrial_primer

./: README.md  README.txt  syncme.sh
docs/: README.txt
docs/docs_extra/: README.txt
examples/01_gpio_ctrl/: astrial pinout.xlsx
examples/01_gpio_ctrl/01_simple/c/: Makefile  kill_trigger.sh  runme.sh  simple_trigger.c
examples/01_gpio_ctrl/01_simple/python/: led_off.py  runme.sh
examples/01_gpio_ctrl/02_timer/c/: logger.h  timer_trigger.c  uncrustify.sh
examples/01_gpio_ctrl/04_pwm/python/: pwm_off.py  pwm_on.py  runme.sh
examples/01_gpio_ctrl/04_pwm/script/: pwm_export.sh
examples/01_gpio_ctrl/05_extra/hdunicorn_tutorial/: README.txt
examples/01_gpio_ctrl/05_extra/rgbled/: README.txt  test_matrix.py  test_off.py  test_white.py
examples/01_gpio_ctrl/05_extra/tic-tac-toe/: README.txt  clear_display.sh  client_player.py  display_off.py  rgbled.py  server_tictactoe.py
examples/02_image_ai/: README.txt
examples/02_image_ai/01_camera_capture/python/: runme.sh  (+1 more)
examples/02_image_ai/02_hailortcli/: 00_check_hailo_device.sh  00_see_model_zoo_hefs.txt  01_hef_parse.txt  02_hef_performance.txt  03_hef_latency.txt  04_hailortcli_monitor.txt  README.txt
examples/02_image_ai/03_object_detection/cpp/: CMakeLists.txt  buildme.sh  detection_inference.cpp  runme.sh
examples/02_image_ai/docs/: README.txt
examples/gpio_ctrl/: README.txt
examples/gpio_ctrl/00_deprecated/: README.txt  trigger.sh
examples/gpio_ctrl/03_pwm/: README.md
examples/gpio_ctrl/03_speedtest/: README.txt
examples/image_ai/01_camera_capture/: README.txt
tools/: astrial_tempmon.sh
(+42 files in other folders)
